--- a/CoffeCheap/lib/nblibraries.properties
+++ b/CoffeCheap/lib/nblibraries.properties
@@ -11,6 +11,10 @@ libs.javaee-endorsed-api-7.0.classpath=\
 libs.javaee-endorsed-api-7.0.displayName=Java EE 7 Endorsed API Library
 libs.javaee-endorsed-api-7.0.javadoc=\
     ${base}/javaee-endorsed-api-7.0/javaee-doc-api.jar
+libs.MySQLDriver.classpath=\
+    ${base}/MySQLDriver/mysql-connector-java-5.1.23-bin.jar
+libs.MySQLDriver.displayName=Driver MySQL JDBC 
+libs.MySQLDriver.prop-maven-dependencies=mysql:mysql-connector-java:5.1.23:jar
 libs.primefaces.classpath=\
     ${base}/primefaces/primefaces-5.0.jar
 libs.primefaces.displayName=PrimeFaces 5.0
