--- a/CoffeCheap/nbproject/project.properties
+++ b/CoffeCheap/nbproject/project.properties
@@ -29,6 +29,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.all-themes-1.0.10.jar=lib/all-themes-1.0.10.jar
+file.reference.BootsFaces-OSP-1.1.2-dist.jar=lib/BootsFaces-OSP-1.1.2-dist.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -43,7 +45,10 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${libs.primefaces.classpath}
+    ${libs.primefaces.classpath}:\
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.BootsFaces-OSP-1.1.2-dist.jar}:\
+    ${file.reference.all-themes-1.0.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
