--- a/CoffeCheap/web/WEB-INF/web.xml
+++ b/CoffeCheap/web/WEB-INF/web.xml
@@ -13,7 +13,12 @@
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>/faces/*</url-pattern>
     </servlet-mapping>
-   
+    
+    <context-param>
+        <param-name>primefaces.THEME</param-name>
+        <param-value>humanity</param-value>
+    </context-param>
+    
     <session-config>
         <session-timeout>
             30
