--- a/CoffeCheap/nbproject/project.properties
+++ b/CoffeCheap/nbproject/project.properties
@@ -33,6 +33,16 @@ endorsed.classpath=\
 excludes=
 file.reference.all-themes-1.0.10.jar=lib/all-themes-1.0.10.jar
 file.reference.BootsFaces-OSP-1.1.3-dist-default.jar=lib/BootsFaces-OSP-1.1.3-dist-default.jar
+file.reference.commons-beanutils-1.8.2.jar=lib\\commons-beanutils-1.8.2.jar
+file.reference.commons-collections-3.2.1.jar=lib\\commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=lib\\commons-digester-2.1.jar
+file.reference.commons-javaflow-20060411.jar=lib\\commons-javaflow-20060411.jar
+file.reference.commons-logging-1.1.jar=lib\\commons-logging-1.1.jar
+file.reference.groovy-all-2.0.1.jar=lib\\groovy-all-2.0.1.jar
+file.reference.iText-2.1.7.js2.jar=lib\\iText-2.1.7.js2.jar
+file.reference.jasperreports-5.5.0.jar=lib\\jasperreports-5.5.0.jar
+file.reference.png-encoder-1.5.jar=lib\\png-encoder-1.5.jar
+file.reference.poi-3.7-20101029.jar=lib\\poi-3.7-20101029.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -913,7 +923,17 @@ javac.classpath=\
     ${file.reference.primefaces-6.1.jar}:\
     ${file.reference.BootsFaces-OSP-1.1.2-dist.jar}:\
     ${file.reference.BootsFaces-OSP-1.1.3-dist.jar}:\
-    ${file.reference.humanity-1.0.10.jar}
+    ${file.reference.humanity-1.0.10.jar}:\
+    ${file.reference.commons-beanutils-1.8.2.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-javaflow-20060411.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.groovy-all-2.0.1.jar}:\
+    ${file.reference.iText-2.1.7.js2.jar}:\
+    ${file.reference.jasperreports-5.5.0.jar}:\
+    ${file.reference.png-encoder-1.5.jar}:\
+    ${file.reference.poi-3.7-20101029.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
